internet_gw.tf
  /*resource "aws_internet_gateway" "internet_gw" {
    vpc_id = module.vpc.vpc_id
  }*/
